--- a/VÝUKA/Pokročilí/001-Úvod.md
+++ b/VÝUKA/Pokročilí/001-Úvod.md
@@ -1,1 +1,11 @@
 # Úvod (2023/2024)
+
+
+## Co budeme dělat
+
+1. **Opakování**
+  - procvičení všech znalostí, jež jste doposud nabyli
+2. **Objektově Orientované Programování (OOP)**
+  - seznámení se se základy OOP, pak i s pokročilejšími koncepty jako je **dědičnost** či **polymorfismus**
+  - pochopení pojmů třída, objekt, instance, atribut, metoda, konstruktor atd.
+  - naučíme se používat objekty a vysvětlíme si, proč je objektově orientované programování tak rozšířené
