Doplnění osnovy pro pokročilé, práce na OOP.

--- a/VÝUKA/Pokročilí/001-Úvod.md
+++ b/VÝUKA/Pokročilí/001-Úvod.md
@@ -3,9 +3,27 @@
 
 ## Co budeme dělat
 
-1. **Opakování**
+### 1) Opakování
   - procvičení všech znalostí, jež jste doposud nabyli
-2. **Objektově Orientované Programování (OOP)**
+
+### 2) Objektově Orientované Programování (OOP)
   - seznámení se se základy OOP, pak i s pokročilejšími koncepty jako je **dědičnost** či **polymorfismus**
   - pochopení pojmů třída, objekt, instance, atribut, metoda, konstruktor atd.
   - naučíme se používat objekty a vysvětlíme si, proč je objektově orientované programování tak rozšířené
+
+### 3) Knihovny
+  - co je to knihovna
+  - jak fungují knihovny v Pythonu
+  - jak používat příkaz **pip** k instalaci nových balíčků
+  - ukázka nejpoužívanějších knihoven + procvičení na příkladech
+    - knihovna **PIL** pro práci s obrázky
+    - knihovna **matplotlib** pro tvorbu grafů a vizualizaci dat
+    - Něco dalšího (TODO)? 
+
+### 4) Webová aplikace
+  - co to je **framework** a jak se liší oproti knihovně
+  - seznámení se s frameworkem **Flask**
+  - pochopení pojmů jako je server, routování, databáze
+  - základy HTML + CSS
+  - tvorba vlastní jednoduché webové aplikace
+  - nasazení aplikace (možná?)
